src/objects/Charket__WeChatTagLink__c.object
<CustomObject>
    <fields>
        <fullName>Charket__WeChatPass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Pass</label>
        <referenceTo>Charket__WeChatPass__c</referenceTo>
        <relationshipLabel>WeChat Tag Links</relationshipLabel>
        <relationshipName>WeChatTagLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatQRCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat QR Code</label>
        <referenceTo>Charket__WeChatQRCode__c</referenceTo>
        <relationshipLabel>WeChat Tag Links</relationshipLabel>
        <relationshipName>WeChatTagLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatResponse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Response</label>
        <referenceTo>Charket__WeChatResponse__c</referenceTo>
        <relationshipLabel>WeChat Tag Links</relationshipLabel>
        <relationshipName>WeChatTagLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatTag__c</fullName>
        <label>WeChat Tag</label>
        <referenceTo>Charket__WeChatTag__c</referenceTo>
        <relationshipLabel>WeChat Tag Links</relationshipLabel>
        <relationshipName>WeChatTagLinks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WeChat Tag Link</label>
    <nameField>
        <displayFormat>TL-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Tag Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>